@@ -22,9 +22,9 @@
  *
  */
 
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.MemorySegment;
-
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.SegmentAllocator;
 import org.testng.annotations.*;
 import static org.testng.Assert.*;
 
@@ -40,7 +40,8 @@ public class TestStringEncoding {
     @Test(dataProvider = "strings")
     public void testStrings(String testString, int expectedByteLength) {
         try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment text = session.allocateUtf8String(testString);
+            SegmentAllocator allocator = SegmentAllocator.newNativeArena(expectedByteLength, session);
+            MemorySegment text = allocator.allocateUtf8String(testString);
 
             assertEquals(text.byteSize(), expectedByteLength);
 
